--- a/pccts/CMakeLists.txt
+++ b/pccts/CMakeLists.txt
@@ -28,6 +28,10 @@ add_executable(antlr ${ANTLR_SOURCES})
 set_target_properties(antlr PROPERTIES LINKER_LANGUAGE C)
 set_target_properties(antlr PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
 set_target_properties(antlr PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+#foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
+#    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
+#    set_target_properties(antlr PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/bin" )
+#endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
 
 #install(TARGETS antlr CONFIGURATIONS Debug DESTINATION ../bin/debug)
 #install(TARGETS antlr CONFIGURATIONS Release DESTINATION ../bin/release)
@@ -51,8 +55,12 @@ include_directories(dlg h support/set)
 
 add_executable(dlg ${DLG_SOURCES})
 set_target_properties(dlg PROPERTIES LINKER_LANGUAGE C)
-set_target_properties (dlg PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
+set_target_properties(dlg PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
 set_target_properties(dlg PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+#foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
+#    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
+#    set_target_properties(dlg PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/bin" )
+#endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
 
 #install(TARGETS dlg CONFIGURATIONS Debug DESTINATION ../bin/debug)
 #install(TARGETS dlg CONFIGURATIONS Release DESTINATION ../bin/release)
